--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.idea/
+.pytest_cache/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -85,6 +88,8 @@ celerybeat-schedule
 # virtualenv
 .venv
 venv/
+venv2/
+venv3/
 ENV/
 
 # Spyder project settings
