--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pytest==3.4.2
-SQLAlchemy==1.2.5
-jsonschema==2.6.0
-pyyaml==3.12
+jsonschema>=2.6.0
+pytest-runner>=4.2
+PyYAML>=3.12
+SQLAlchemy>=1.2.5
